--- a/style.css
+++ b/style.css
@@ -7,13 +7,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
 }
 
 .task-list {
     width: 100%;
     max-width: 664px;
-    border: 2px solid #000;
     padding: 50px 40px;
 }
 
@@ -206,6 +204,7 @@ input[placeholder],
 
 .all-task__headline {
     padding-bottom: 32px;
+    display: none;
 }
 
 .all-task__task {
@@ -214,7 +213,7 @@ input[placeholder],
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-    padding-bottom: 20px;
+    padding: 20px 0;
 }
 
 .all-task__container {
